@@ -1,3 +1,6 @@
+Aug 14, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
+- fix saving of server filters (reported by Steffen Pankratz)
+
 Aug 07, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
 - add script install button
 - add multiple sort modes per column (#1253101)
